Added Gaetron switches to variants.

--- a/assets/base.css
+++ b/assets/base.css
@@ -1994,6 +1994,7 @@ input[type='checkbox'] {
 
 .quantity__input[type='number'] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .quantity__rules {
