Switched Gaetrons to vertical.

--- a/snippets/product-switch-type.liquid
+++ b/snippets/product-switch-type.liquid
@@ -77,7 +77,7 @@
 <style>
   .switch-type-options {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
   .switch-type-option {}
   .switch-type-option input {}
