--- a/snippets/product-switch-type.liquid
+++ b/snippets/product-switch-type.liquid
@@ -56,16 +56,16 @@
       <label for="{{ input_id }}">
         {% if value == 'Gateron Blue' %}
           <img src="https://cdn.shopify.com/s/files/1/0883/1352/8619/files/gateron-blue.png?v=1726427684" alt="{{ value }}">
-        {% elsif value == 'Gateron Red' %}
-          <img src="https://cdn.shopify.com/s/files/1/0883/1352/8619/files/gateron-red.png?v=1726427604" alt="{{ value }}">
+        {% elsif value == 'Gateron Brown' %}
+          <img src="https://cdn.shopify.com/s/files/1/0883/1352/8619/files/gateron-brown.png?v=1726945628" alt="{{ value }}">
         {% endif %}
         <div class="switch-type-info">
           <span class="switch-type-name">{{ value }}</span>
           <span class="switch-type-description">
           {% if value == 'Gateron Blue' %}
-            Clicky!  
-          {% elsif value == 'Gateron Red' %}
-            Quiet
+            Clicky
+          {% elsif value == 'Gateron Brown' %}
+            Tactile
           {% endif %}
           </span>
         </div>
