--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -299,7 +299,7 @@
     </div>
     <div class="footer__content-bottom-wrapper page-width{% if section.settings.enable_country_selector == false and section.settings.enable_language_selector == false %} footer__content-bottom-wrapper--center{% endif %}">
       <div class="footer__copyright caption">
-        <small class="copyright__content"
+        <small class="copyright__content">
           🌀 Copyleft {{ 'now' | date: '%Y' }}, {{ "Absurd Explorations (OPC) Private Limited" | link_to: routes.root_url -}}
         </small>
         {%- if section.settings.show_policy -%}
