--- a/snippets/product-switch-type.liquid
+++ b/snippets/product-switch-type.liquid
@@ -58,6 +58,8 @@
           <img src="https://cdn.shopify.com/s/files/1/0883/1352/8619/files/gateron-blue.png?v=1726427684" alt="{{ value }}">
         {% elsif value == 'Gateron Brown' %}
           <img src="https://cdn.shopify.com/s/files/1/0895/8794/1649/files/gateron-brown.png?v=1726945933" alt="{{ value }}">
+        {% elsif value == 'Gateron Red' %}
+          <img src="https://cdn.shopify.com/s/files/1/0895/8794/1649/files/mx-red.png?v=1728928739" alt="{{ value }}">
         {% endif %}
         <div class="switch-type-info">
           <span class="switch-type-name">{{ value }}</span>
