--- a/snippets/product-switch-type.liquid
+++ b/snippets/product-switch-type.liquid
@@ -66,6 +66,8 @@
           <span class="switch-type-description">
           {% if value == 'Gateron Blue' %}
             Clicky
+          {% elsif value == 'Gateron Red' %}
+            Linear (Quiet)
           {% elsif value == 'Gateron Brown' %}
             Tactile
           {% endif %}
